# KireMisu

./: .dockerignore  .env.example  .env.test  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  COMPREHENSIVE_TEST_COVERAGE_SUMMARY.md  LICENSE  MANUAL_TESTING_READER.md  Makefile  POLLING_OPTIMIZATION_SUMMARY.md  QUICK_TEST.md  R1-VALIDATION-REPORT.md  README.md  SECURITY_IMPLEMENTATION_SUMMARY.md  atomic-features-20250902.md  create_test_data.py  demo_reading_progress.py  docker-compose.dev.yml  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  manual-r1-validation.py  package.json  pyproject.toml  test-notifications-frontend.js  validate-r1-functionality.sh  validate_job_system.py
.claude/: instructions.md  mcp.json  workflow.md
.claude/agents/: backend-developer.yml  code-reviewer.md  code-reviewer.yml  devops-infrastructure.yml  documentation-specialist.yml  fastapi-backend-architect.md  fastapi-python-dev.md  feature-orchestrator.md  (+9 more)
.devcontainer/: Dockerfile.backend  Dockerfile.frontend  README.md  devcontainer.json  docker-compose.yml
backend/: .env.example  DOWNLOAD_API_CONTRACT.md  Dockerfile  Dockerfile.dev  FEATURE_IMPLEMENTATION_SUMMARY.md  alembic.ini  init_admin.py  pyproject.toml  security_check.py  security_validation_test.py  test_auth.py
backend/alembic/: env.py
backend/alembic/versions/: 08f7d07d6897_add_performance_indexes_for_watching_.py  09c754a38e7a_add_position_and_color_fields_to_.py  2c40c7a89de4_update_notification_types_to_match_.py  313f5220df15_merge_migration_heads.py  38aab752f786_update_job_type_constraint_to_include_.py  6a902a049b26_add_notification_model_for_watching_.py  8b7fa7ea0263_add_database_constraints_for_job_queue_.py  967477b87788_add_push_subscriptions_table.py  9b9b57e49e03_add_user_model_and_auth_improvements.py  a1b2c3d4e5f6_add_started_reading_at_to_chapters.py  ad321789d335_add_compound_indexes_for_job_queue_.py  add_tag_color_constraint.py  cf4815a2275e_initial_migration_create_series_and_.py  dd79f52da30b_add_fileoperations_table.py  dd79f52da30b_add_tags_and_series_tags_tables.py  ee80c53ea31c_add_fileoperations_table.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  health.py  series.py
backend/app/core/: config.py  rate_limit.py
backend/app/db/: database.py  init_db.py
backend/app/models/: __init__.py  chapter.py  series.py  user.py
backend/app/repositories/: series.py  user.py
backend/app/schemas/: __init__.py  series.py  user.py
backend/app/services/: series.py  user.py
backend/kiremisu/: __init__.py  main.py
backend/kiremisu/api/: annotations.py  auth.py  chapters.py  dashboard.py  downloads.py  file_operations.py  filesystem.py  jobs.py  library.py  mangadx.py  metrics.py  notifications.py  push_notifications.py  reader.py  reading_progress.py  series.py  tags.py  watching.py  websocket.py
backend/kiremisu/core/: auth.py  config.py  error_handler.py  metrics.py  rate_limiter.py  session_auth.py  unified_auth.py
backend/kiremisu/database/: README.md  __init__.py  config.py  connection.py  migrations.py  models.py  schemas.py  utils.py
backend/kiremisu/services/: __init__.py  download_service.py  file_operations.py  filesystem_parser.py  importer.py  job_scheduler.py  job_worker.py  library_path.py  mangadx_client.py  mangadx_import.py  notification_service.py  reading_progress.py  watching_service.py
backend/kiremisu/websocket/: __init__.py  connection_manager.py
backend/scripts/: generate_secure_keys.py  startup.sh  test_push_notifications.py
backend/tests/: conftest.py
backend/tests/unit/: test_models.py
backend/tests/unit/test_repositories/: test_series.py  test_series_repository.py  test_user.py
backend/tests/unit/test_services/: test_series_service.py
docs/: API_PATTERNS.md  DEPLOYMENT.md  DEV_CONTEXT.md  SECURITY.md  TESTING.md  TESTING_READER.md  UI_SYSTEM.md  kiremisu_data_model.md  kiremisu_tech_stack.md  kiremisu_ui_mock.tsx
frontend/: .env.test.example  .eslintrc.json  .gitignore  Dockerfile  Dockerfile.dev  jest.config.js  jest.setup.js  next.config.js  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
scripts/: compare_coverage.py  dev-workflow.sh  dev.sh  init-db.sql  migrate-docks.sh  run-comprehensive-e2e.sh  start-prod.sh  start-test.sh  test-reader.sh
tests/: R2_TESTING_DOCUMENTATION.md  __init__.py  conftest.py
(+213 files in other folders)
